--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2",
